@@ -298,12 +298,12 @@ public class PaginationPanel {
         List<Separator> pageSeparators = Separator.factory(ConfigCore.getParameter(ParameterCore.PAGE_SEPARATORS));
         try {
             String initializer = paginationTypeSelectSelectedItem.format(selectPaginationModeSelectedItem.getValue(),
-                paginationStartValue, fictitiousCheckboxChecked, pageSeparators.get(0).getSeparatorString());
+                paginationStartValue, fictitiousCheckboxChecked, pageSeparators.getFirst().getSeparatorString());
             Paginator paginator = new Paginator(initializer);
             List<PhysicalDivision> physicalDivisions = dataEditor.getWorkpiece()
                     .getAllPhysicalDivisionChildrenSortedFilteredByPageAndTrack();
             if (selectPaginationScopeSelectedItem) {
-                for (int i = itemsForPagination.get(0); i < physicalDivisions.size(); i++) {
+                for (int i = itemsForPagination.getFirst(); i < physicalDivisions.size(); i++) {
                     physicalDivisions.get(i).setOrderlabel(paginator.next());
                 }
             } else {
@@ -325,7 +325,7 @@ public class PaginationPanel {
      */
     public void show() {
         paginationTypeSelectSelectedItem = resolveDefaultPaginationType();
-        selectPaginationModeSelectedItem = selectPaginationModeItems.get(0);
+        selectPaginationModeSelectedItem = selectPaginationModeItems.getFirst();
         paginationStartValue = "1";
         fictitiousCheckboxChecked = false;
         selectPaginationScopeSelectedItem = Boolean.TRUE;
