@@ -169,7 +169,7 @@ public class RulesetService extends BaseBeanService<Ruleset, RulesetDAO> {
         } else {
             if (Objects.nonNull(ruleset.getId())) {
                 if (rulesets.size() == 1) {
-                    return !rulesets.get(0).getId().equals(ruleset.getId());
+                    return !rulesets.getFirst().getId().equals(ruleset.getId());
                 } else {
                     return true;
                 }
@@ -343,7 +343,7 @@ public class RulesetService extends BaseBeanService<Ruleset, RulesetDAO> {
             if (Objects.isNull(keySegments) || keySegments.isEmpty()) {
                 return "";
             }
-            String currentSegment = keySegments.get(0);
+            String currentSegment = keySegments.getFirst();
             for (Metadata metadataElement : ((MetadataGroup)metadata).getMetadata()) {
                 if (currentSegment.equals(metadataElement.getKey())) {
                     return getNestedMetadataValue(metadataElement, keySegments.subList(1, keySegments.size()));
@@ -416,10 +416,10 @@ public class RulesetService extends BaseBeanService<Ruleset, RulesetDAO> {
             String groupLabel = "";
             for (String key : keyHierarchy) {
                 if (keyHierarchy.indexOf(key) == 0) {
-                    groupLabel = ruleset.getTranslationForKey(keyHierarchy.get(0), languages).orElse(metadataKey);
+                    groupLabel = ruleset.getTranslationForKey(keyHierarchy.getFirst(), languages).orElse(metadataKey);
                 } else {
                     List<String> nestedKeys = new LinkedList<>();
-                    nestedKeys.add(keyHierarchy.get(0));
+                    nestedKeys.add(keyHierarchy.getFirst());
                     nestedKeys.add(key);
                     Optional<String> nestedKeyTranslation = ruleset.getTranslationForKey(nestedKeys, languages);
                     if (nestedKeyTranslation.isPresent()) {
