@@ -44,7 +44,7 @@ public class ProcessDetailIT {
         division.getMetadata().add(titleDocMain);
         ProcessFieldedMetadata processFieldedMetadata = new ProcessFieldedMetadata(division, divisionView, ruleset);
         TreeNode<Object> treeNode = processFieldedMetadata.getTreeNode();
-        ProcessDetail processDetail = (ProcessDetail) treeNode.getChildren().get(0).getData();
+        ProcessDetail processDetail = (ProcessDetail) treeNode.getChildren().getFirst().getData();
         int beforeCopying = treeNode.getChildCount();
         processDetail.copy();
         assertEquals(beforeCopying + 1, treeNode.getChildCount(), "Should have copied metadata");
